Created Generic Footer w/ social Links
Issue #2 completed

--- a/src/fonts.css
+++ b/src/fonts.css
@@ -1,3 +1,5 @@
+/* ADDING FONTS */
+
 @font-face {
     font-family: 'Magdelin-Medium';
     src: url('./assets/fonts/Magdelin-Medium.otf') format('opentype');
