--- a/src/styles/title.css
+++ b/src/styles/title.css
@@ -8,7 +8,8 @@
 
 .title-content-container {
     justify-content: left;
-    padding-left: 60px
+    padding-left: 100px;
+    padding-top: 30px;
 }
 
 .umang-sharma {
