--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -1,7 +1,7 @@
 .projects {
     font-family: 'Magdelin';
     font-size: 23px;
-    padding-top: 100px;
+    padding-top: 75px;
     padding-left: 137px;
 }
 
@@ -18,7 +18,7 @@
 
 .internships {
     font-family: 'Magdelin';
-    font-size: 30px;
+    font-size: 25px;
     padding-top: 75px;
     padding-left: 137px;
 }
@@ -26,4 +26,29 @@
 .internships-heading {
     font-family: 'Origin' !important;
     font-size: 150px !important;
+    margin-bottom: 50px;
+}
+
+.internship-company {
+    font-family: 'Origin';
+    font-size: 120px;
+    margin: 0;
+    padding: 0px;
+}
+
+.internship-unit {
+    display: flex;
+    align-content: center;
+}
+
+.internship-info {
+    width: 60%;
+    padding-left: 0px;
+    padding-right: 80px;
+}
+
+.bullet {
+    height: 70px !important;
+    margin: 0px !important;
+    padding: 0px !important;
 }
