Added now.gg internship content
Progess on #8

--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -18,7 +18,7 @@
 
 .internships {
     font-family: 'Magdelin';
-    font-size: 25px;
+    font-size: 23px;
     padding-top: 75px;
     padding-left: 137px;
 }
@@ -39,6 +39,7 @@
 .internship-unit {
     display: flex;
     align-content: center;
+    text-align: justify;
 }
 
 .internship-info {
@@ -51,4 +52,5 @@
     height: 70px !important;
     margin: 0px !important;
     padding: 0px !important;
+    opacity: 50%;
 }
